@@ -31,72 +31,72 @@ import static org.springframework.security.config.http.SessionCreationPolicy.STA
 @EnableWebSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
-    private static final String GHG_AUTH_ENTRY_POINTS = "/api/ghg/v1/auth/**";
-    private static final String GHG_LOGOUT_URL = "/api/ghg/v1/user/signout";
-    private final HttpRequestEndpointChecker httpRequestEndpointChecker;
-    private final JwtAuthenticationFilter jwtAuthenticationFilter;
-    private final CustomLogoutHandler customLogoutHandler;
-    private final CustomLogoutSuccessHandler customLogoutSuccessHandler;
-    private final AuthenticationProvider authenticationProvider;
+        private static final String GHG_AUTH_ENTRY_POINTS = "/api/ghg/v1/auth/**";
+        private static final String GHG_LOGOUT_URL = "/api/ghg/v1/user/signout";
+        private final HttpRequestEndpointChecker httpRequestEndpointChecker;
+        private final JwtAuthenticationFilter jwtAuthenticationFilter;
+        private final CustomLogoutHandler customLogoutHandler;
+        private final CustomLogoutSuccessHandler customLogoutSuccessHandler;
+        private final AuthenticationProvider authenticationProvider;
 
-    @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http, HandlerMappingIntrospector introspector) throws Exception {
-        MvcRequestMatcher.Builder mvcMatcherBuilder = new MvcRequestMatcher.Builder(introspector);
+        @Bean
+        public SecurityFilterChain securityFilterChain(HttpSecurity http, HandlerMappingIntrospector introspector)
+                        throws Exception {
+                MvcRequestMatcher.Builder mvcMatcherBuilder = new MvcRequestMatcher.Builder(introspector);
 
-        http.cors(withDefaults());
+                http.cors(withDefaults());
 
-        http.httpBasic(AbstractHttpConfigurer::disable);
+                http.httpBasic(AbstractHttpConfigurer::disable);
 
-        http.csrf(AbstractHttpConfigurer::disable);
+                http.csrf(AbstractHttpConfigurer::disable);
 
-        http.headers(headersConfigurer ->
-                headersConfigurer.frameOptions(HeadersConfigurer.FrameOptionsConfig::sameOrigin));
+                http.headers(headersConfigurer -> headersConfigurer
+                                .frameOptions(HeadersConfigurer.FrameOptionsConfig::sameOrigin));
 
-        http.authorizeHttpRequests(auth ->
-                auth
-                        .requestMatchers(PathRequest.toH2Console()).permitAll()
-                        .requestMatchers(mvcMatcherBuilder.pattern("/v3/api-docs/**")).permitAll()
-                        .requestMatchers(mvcMatcherBuilder.pattern("/swagger-ui/**")).permitAll()
-                        .requestMatchers(mvcMatcherBuilder.pattern("/swagger-resources/**")).permitAll()
-                        .requestMatchers(mvcMatcherBuilder.pattern(GHG_AUTH_ENTRY_POINTS)).permitAll()
-                        .anyRequest().authenticated()
-        );
+                http.authorizeHttpRequests(auth -> auth
+                                .requestMatchers(PathRequest.toH2Console()).permitAll()
+                                .requestMatchers(mvcMatcherBuilder.pattern("/v3/api-docs/**")).permitAll()
+                                .requestMatchers(mvcMatcherBuilder.pattern("/api/**")).permitAll()
+                                .requestMatchers(mvcMatcherBuilder.pattern("/swagger-ui/**")).permitAll()
+                                .requestMatchers(mvcMatcherBuilder.pattern("/swagger-resources/**")).permitAll()
+                                .requestMatchers(mvcMatcherBuilder.pattern(GHG_AUTH_ENTRY_POINTS)).permitAll()
+                                .anyRequest().authenticated());
 
-        http.exceptionHandling(exceptionHandlingConfigurer ->
-                exceptionHandlingConfigurer
-                        .authenticationEntryPoint(new CustomAuthenticationEntryPoint(httpRequestEndpointChecker))
-                        .accessDeniedHandler(new CustomAccessDeniedHandler(httpRequestEndpointChecker)));
+                http.exceptionHandling(exceptionHandlingConfigurer -> exceptionHandlingConfigurer
+                                .authenticationEntryPoint(
+                                                new CustomAuthenticationEntryPoint(httpRequestEndpointChecker))
+                                .accessDeniedHandler(new CustomAccessDeniedHandler(httpRequestEndpointChecker)));
 
-        http.sessionManagement(manager -> manager.sessionCreationPolicy(STATELESS));
+                http.sessionManagement(manager -> manager.sessionCreationPolicy(STATELESS));
 
-        http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+                http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
-        http.logout(logoutConfig -> logoutConfig
-                .logoutUrl(GHG_LOGOUT_URL)
-                .addLogoutHandler(customLogoutHandler)
-                .logoutSuccessHandler(customLogoutSuccessHandler));
+                http.logout(logoutConfig -> logoutConfig
+                                .logoutUrl(GHG_LOGOUT_URL)
+                                .addLogoutHandler(customLogoutHandler)
+                                .logoutSuccessHandler(customLogoutSuccessHandler));
 
-        return http.build();
-    }
+                return http.build();
+        }
 
-    @Bean
-    public AuthenticationManager authManager(HttpSecurity http) throws Exception {
-        AuthenticationManagerBuilder authenticationManagerBuilder = http
-                .getSharedObject(AuthenticationManagerBuilder.class);
-        authenticationManagerBuilder.authenticationProvider(authenticationProvider);
-        return authenticationManagerBuilder.build();
-    }
+        @Bean
+        public AuthenticationManager authManager(HttpSecurity http) throws Exception {
+                AuthenticationManagerBuilder authenticationManagerBuilder = http
+                                .getSharedObject(AuthenticationManagerBuilder.class);
+                authenticationManagerBuilder.authenticationProvider(authenticationProvider);
+                return authenticationManagerBuilder.build();
+        }
 
-    @Bean
-    CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000", "http://127.0.0.1:3000"));
-        configuration.setAllowedMethods(List.of("HEAD", "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(
-                List.of("Authorization", "Cache-Control", "Content-Type", "Accept-Language"));
-        configuration.setAllowCredentials(true);
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
+        @Bean
+        CorsConfigurationSource corsConfigurationSource() {
+                CorsConfiguration configuration = new CorsConfiguration();
+                configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000", "http://127.0.0.1:3000"));
+                configuration.setAllowedMethods(List.of("HEAD", "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+                configuration.setAllowedHeaders(
+                                List.of("Authorization", "Cache-Control", "Content-Type", "Accept-Language"));
+                configuration.setAllowCredentials(true);
+                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+                source.registerCorsConfiguration("/**", configuration);
+                return source;
+        }
 }
